Done first version of HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,65 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <h1>hola</h1>
+    <div class="floating-btn">
+      <a href="#"><img src="http://lorempixel.com/150/150" alt=""></a>
+    </div>
+    <section>
+      <header>
+        <h1>
+          Go LOCO FOR COCOLOCO!
+        </h1>
+        <h2>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h2>        
+      </header>
+      <div class="cta-text">
+        <p>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</p>
+      </div>
+    </section>
+    <section class="benefits">
+      <h2>So many benefits</h2>
+      <div class="feature">
+        <img src="http://lorempixel.com/400/200" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+      <div class="feature">
+          <img src="http://lorempixel.com/400/200" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+      <div class="feature">
+          <img src="http://lorempixel.com/400/200" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+    </section>
+    <section class="testimonials">
+      <h2>So many testimonials</h2>
+      <div class="testimonial">
+          <img src="http://lorempixel.com/200/200" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+      <div class="testimonial">
+          <img src="http://lorempixel.com/200/200" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+      <div class="testimonial">
+          <img src="http://lorempixel.com/200/200" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+    </section>
+    <section class="certifications">
+      <h2>So many certifications</h2>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+      <div class="brand-logo"><img src="http://lorempixel.com/125/125" alt=""></div>
+    </section>
+    <footer>
+      <p>Copyright or copy everything by COCOLOCO awesome team</p>
+    </footer>
+    
     <script src='main.js'></script>
   </body>
 </html>
