--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html lang='en'>
+<html lang="en">
   <head>
     <title>COCOLOCO awesome superfood</title>
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-    <link rel='stylesheet' href='style.css'>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="floating-btn">
-      <a href="#"><img src="http://via.placeholder.com/150/150" alt=""></a>
+      <a href="#"><img src="assets/img/coconut.svg" alt=""></a>
     </div>
-    <section class="hero-intro">
+    <section class="hero-intro container">
       <header>
         <h1>Go LOCO FOR COCOLOCO!</h1>
         <h2>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h2>        
@@ -19,7 +19,7 @@
         <p>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</p>
       </div>
     </section>
-    <section class="benefits">
+    <section class="benefits container">
       <h2>So many benefits</h2>
       <div class="feature">
         <img src="http://via.placeholder.com/400/200" alt="">
@@ -34,7 +34,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
       </div>
     </section>
-    <section class="testimonials">
+    <section class="testimonials container">
       <h2>So many testimonials</h2>
       <div class="testimonial">
           <img src="http://via.placeholder.com/200/200" alt="">
@@ -49,7 +49,7 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
       </div>
     </section>
-    <section class="certifications">
+    <section class="certifications container">
       <h2>So many certifications</h2>
       <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
       <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
@@ -60,9 +60,9 @@
       <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
       <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
     </section>
-    <footer>
+    <footer class="container">
       <p>Copyright or copy everything by COCOLOCO awesome team</p>
     </footer>    
-    <script src='main.js'></script>
+    <script src="main.js"></script>
   </body>
 </html>
