Added some typography and colors on CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>COCOLOCO awesome superfood</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">    
   </head>
   <body>
     <div class="floating-btn">
@@ -12,11 +14,17 @@
     </div>
     <section class="hero-intro container">
       <header>
-        <h1>Go LOCO FOR COCOLOCO!</h1>
-        <h2>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h2>        
+        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates quasi optio voluptatibus facere itaque pariatur quaerat voluptate ut ipsam nulla eligendi, cum sint eum tempora aspernatur. Vero quis corporis adipisci?</h2>
+        <h1>COCOLOCO</h1>
+        <h3>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h3>        
+        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, labore. Dolorem ipsa dolor ratione labore fugiat expedita consectetur quis ea quas ipsam minima magnam, facere, reiciendis totam repudiandae deserunt id!</h4>
       </header>
       <div class="cta-text">
         <p>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</p>
+      </div>
+      <div class="scrolldown-btn">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae qui debitis quibusdam iste excepturi placeat tempore dolore illum necessitatibus fuga dignissimos delectus aliquid quos aperiam nihil, harum explicabo ad ut.</p>
+        <i></i>
       </div>
     </section>
     <section class="benefits container">
@@ -32,6 +40,9 @@
       <div class="feature">
           <img src="http://via.placeholder.com/400/200" alt="">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      </div>
+      <div class="cta-btn">
+        <a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse, ratione unde rem cupiditate debitis sunt blanditiis! Aperiam, perferendis suscipit! Labore quam nisi, in natus voluptas veritatis perferendis autem consequuntur quod?</a>
       </div>
     </section>
     <section class="testimonials container">
