--- a/index.html
+++ b/index.html
@@ -12,37 +12,44 @@
     <div class="floating-btn">
       <a href="#"><img src="assets/img/coconut.svg" alt=""></a>
     </div>
-    <section class="hero-intro container">
+    <section class="hero-intro">
       <header>
-        <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates quasi optio voluptatibus facere itaque pariatur quaerat voluptate ut ipsam nulla eligendi, cum sint eum tempora aspernatur. Vero quis corporis adipisci?</h2>
+        <h2>this summer go</h2>
         <h1>COCOLOCO</h1>
-        <h3>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h3>        
-        <h4>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, labore. Dolorem ipsa dolor ratione labore fugiat expedita consectetur quis ea quas ipsam minima magnam, facere, reiciendis totam repudiandae deserunt id!</h4>
+        <h3>with our coconut oil</h3>        
+        <h4>Summer is here and coconut oil too!
+          Stop fighting against the sun, say goodbye to dry skin and get ready to have fun
+          </h4>
       </header>
-      <div class="cta-text">
-        <p>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</p>
-      </div>
-      <div class="scrolldown-btn">
+      <!-- <div class="cta-text">
+        <h4>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h4>
+      </div> -->
+      <!-- <div class="scrolldown-btn">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae qui debitis quibusdam iste excepturi placeat tempore dolore illum necessitatibus fuga dignissimos delectus aliquid quos aperiam nihil, harum explicabo ad ut.</p>
         <i></i>
-      </div>
+      </div> -->
     </section>
-    <section class="benefits container">
-      <h2>So many benefits</h2>
+    <section class="benefits container-secondary">
       <div class="feature">
-        <img src="http://via.placeholder.com/400/200" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+        <img src="assets/img/weight-loss.svg" alt="">
+        <p>Two tablespoons of coconut oil a day
+          can reduce inches from your waistline also reduces your hunger helping you eat less.
+          </p>
       </div>
       <div class="feature">
-          <img src="http://via.placeholder.com/400/200" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+          <img src="assets/img/wash.svg" alt="">
+          <p>Two tablespoons of coconut oil a day
+            can reduce inches from your waistline also reduces your hunger helping you eat less.
+            </p>
       </div>
       <div class="feature">
-          <img src="http://via.placeholder.com/400/200" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+          <img src="assets/img/lips.svg" alt="">
+          <p>Two tablespoons of coconut oil a day
+            can reduce inches from your waistline also reduces your hunger helping you eat less.
+            </p>
       </div>
       <div class="cta-btn">
-        <a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse, ratione unde rem cupiditate debitis sunt blanditiis! Aperiam, perferendis suscipit! Labore quam nisi, in natus voluptas veritatis perferendis autem consequuntur quod?</a>
+        <a href="#">GET YOUR FREE SAMPLE</a>
       </div>
     </section>
     <section class="testimonials container">
