Last minute fixing things rush

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/css/uikit.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/css/uikit.min.css" /> -->
     <link rel="stylesheet" href="style.css">    
   </head>
   <body>
@@ -27,13 +27,8 @@
       </div> -->
       <!-- <div class="scrolldown-btn">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae qui debitis quibusdam iste excepturi placeat tempore dolore illum necessitatibus fuga dignissimos delectus aliquid quos aperiam nihil, harum explicabo ad ut.</p>
-<<<<<<< HEAD
         <i></i>
       </div> -->
-=======
-      </div>
-      <i></i>
->>>>>>> bedef1f4e8bd241ed1ae15f5ef1607ad3d359df3
     </section>
     <section class="benefits container-secondary">
       <div class="feature">
@@ -61,20 +56,21 @@
 
     <section class="testimonials container">
       <h2>So many testimonials</h2>
-      <!-- <div class="testimonial">
-          <img src="http://via.placeholder.com/200/200" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
+      <div class="testimonial">
+          <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/57655d62bdebf40b2f5519cc6e0ba0a4/5C0CFFCC/t51.2885-19/s320x320/32606101_646860415654752_3023678116213030912_n.jpg" alt="">
+          <h3 class="uk-card-title">@lovelypepa</h3>
+                              <p>Never felt my skin as fresh and soft as now. I’m ready for the summer now! Thanks you @superfoods.inc for this amazing coconut oil products #readyforthesummer #ibiza2018</p>
       </div>
       <div class="testimonial">
-          <img src="http://via.placeholder.com/200/200" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
-      </div>
+          <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/d444d173346a46d1d07d082fe4ab44fa/5BF25066/t51.2885-19/s320x320/23416448_1330233863770321_2536379991621369856_n.jpg" alt="">
+          <h3 class="uk-card-title">@galagonzalez</h3>
+          <p>Don’t forget to include your coconut oil in your luggage, you won’t regret when you see your body shine this summer ;) @superfoods.inc #summer2018 #coconutoil #naturalproducts #healthy skin</p>      </div>
       <div class="testimonial">
-          <img src="http://via.placeholder.com/200/200" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, praesentium. Amet dolores aliquid perspiciatis ipsa a laborum eligendi nesciunt praesentium aliquam repellendus totam distinctio ratione, esse neque blanditiis! Fugit, nulla.</p>
-      </div> -->
+          <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/d444d173346a46d1d07d082fe4ab44fa/5BF25066/t51.2885-19/s320x320/23416448_1330233863770321_2536379991621369856_n.jpg" alt="">
+          <h3 class="uk-card-title">@dulceida</h3>
+          <p>Superfood Inc. Coconut oil is my go to product!, be it for cooking, as a moisturiser and even removing my makeup!</p>      </div>
 
-      <div class="uk-position-relative uk-visible-toggle uk-light" uk-slider="clsActivated: uk-transition-active; center: true">
+      <!-- <div class="uk-position-relative uk-visible-toggle uk-light" uk-slider="clsActivated: uk-transition-active; center: true">
 
         <div uk-slider="autoplay: true, autoplay-interval: 1000">
 
@@ -124,26 +120,23 @@
         
             <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
         
-        </div>
+        </div> -->
 
     </section>
     <section class="certifications container">
-      <h2>So many certifications</h2>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
-      <div class="brand-logo"><img src="http://via.placeholder.com/125/125" alt=""></div>
+      <h2>As seen on</h2>
+      <div class="brand-logo"><img src="assets/img/VOGUE_LOGO.svg" alt=""></div>
+      <div class="brand-logo"><img src="assets/img/Comopolitan_Magazine_Logo.svg" alt=""></div>
+      <div class="brand-logo"><img src="assets/img/ELLE_Magazine_Logo.svg" alt=""></div>
+
+
     </section>
     <footer class="container">
       <p>Copyright or copy everything by COCOLOCO awesome team</p>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit-icons.min.js"></script>    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/js/uikit-icons.min.js"></script>     -->
 
     <script src="main.js"></script>
   </body>
