Last minute stuff

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:600,400,700,500" rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.10/css/uikit.min.css" /> -->
     <link rel="stylesheet" href="style.css">    
   </head>
@@ -18,13 +18,12 @@
         <h2>this summer go</h2>
         <h1>COCOLOCO</h1>
         <h3>with our coconut oil</h3>        
-        <h4>Summer is here and coconut oil too!
-          Stop fighting against the sun, say goodbye to dry skin and get ready to have fun
+        <h4>Yes! summer is here and so is Superfood Inc’s coconut oil. Stop fighting against the sun, say goodbye to dry skin and get ready to have fun!
           </h4>
       </header>
-      <!-- <div class="cta-text">
-        <h4>Duis quis elit magna ea ullamco commodo excepteur fugiat magna occaecat.</h4>
-      </div> -->
+      <div class="cta-text">
+        <h4>Tap the coconut for a FREE SAMPLE!</h4>
+      </div>
       <!-- <div class="scrolldown-btn">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae qui debitis quibusdam iste excepturi placeat tempore dolore illum necessitatibus fuga dignissimos delectus aliquid quos aperiam nihil, harum explicabo ad ut.</p>
         <i></i>
@@ -55,20 +54,20 @@
     </section>
 
     <section class="testimonials container">
-      <h2>So many testimonials</h2>
+      <h2>Testimonials</h2>
       <div class="testimonial">
           <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/57655d62bdebf40b2f5519cc6e0ba0a4/5C0CFFCC/t51.2885-19/s320x320/32606101_646860415654752_3023678116213030912_n.jpg" alt="">
           <h3 class="uk-card-title">@lovelypepa</h3>
                               <p>Never felt my skin as fresh and soft as now. I’m ready for the summer now! Thanks you @superfoods.inc for this amazing coconut oil products #readyforthesummer #ibiza2018</p>
       </div>
-      <div class="testimonial">
+      <!-- <div class="testimonial">
           <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/d444d173346a46d1d07d082fe4ab44fa/5BF25066/t51.2885-19/s320x320/23416448_1330233863770321_2536379991621369856_n.jpg" alt="">
           <h3 class="uk-card-title">@galagonzalez</h3>
           <p>Don’t forget to include your coconut oil in your luggage, you won’t regret when you see your body shine this summer ;) @superfoods.inc #summer2018 #coconutoil #naturalproducts #healthy skin</p>      </div>
       <div class="testimonial">
           <img src="https://instagram.fmad3-4.fna.fbcdn.net/vp/d444d173346a46d1d07d082fe4ab44fa/5BF25066/t51.2885-19/s320x320/23416448_1330233863770321_2536379991621369856_n.jpg" alt="">
           <h3 class="uk-card-title">@dulceida</h3>
-          <p>Superfood Inc. Coconut oil is my go to product!, be it for cooking, as a moisturiser and even removing my makeup!</p>      </div>
+          <p>Superfood Inc. Coconut oil is my go to product!, be it for cooking, as a moisturiser and even removing my makeup!</p>      </div> -->
 
       <!-- <div class="uk-position-relative uk-visible-toggle uk-light" uk-slider="clsActivated: uk-transition-active; center: true">
 
